Wed Aug 26 09:26:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* id_table.c (list_table_extend, hash_table_extend): remove C99
	  features.  [ruby-dev:49239] [Bug #11487]

Tue Aug 25 06:34:43 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (w32_symlink): implement symlink().

Mon Aug 24 16:01:19 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_locale_encindex): find encoding index without
	  making a string object every time.  [ruby-core:58160] [Bug #9080]

Sat Aug 22 15:43:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (check_funcall_failed, check_funcall_missing): cache
	  results of respond_to? and respond_to_missing?, and search a
	  public method only for compatibility with rb_respond_to.

Sat Aug 22 08:23:32 2015  Koichi Sasada  <ko1@atdot.net>

	* ext/thread/thread.c: move definitions of Queue, SizedQueue
	  and ConditionalVariables to thread_tools.c. In other words,
	  such classes are built-in.
	  [Feature #8919]

	  At first, I planned to embed only a Queue class.
	  However, rubygems requires 'thread.rb' (rubygems are
	  required at first, when launch MRI without --disable-gems).
	  So most of people require 'thread.rb' as an embedded library.

	  Now, ext/thread/thread.c is empty, only for a dummy for
	  compatibility.

	* thread.c: move a definition of Mutex class to thread_tools.c.

	  And define Mutex class under Thread (so now Mutex is Thread::Mutex).
	  Because other thread related classes are also defined under Thread.
	  We remain ::Mutex as Thread::Mutex. Only an inspect result is changed.

	* common.mk: add dependency from thread.o to thread_tools.c.

Sat Aug 22 05:31:37 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_opts.h, iseq.c, iseq.h: add compile option to force frozen
	  string literals.
	  [Feature #11473]

	  This addition is not specification change, but to try frozen
	  string literal world discussed on [Feature #11473].

	  You can try frozen string literal world using this magical line: